--- a/lagarReglerTillsyn.html
+++ b/lagarReglerTillsyn.html
@@ -1,1 +1,63 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <!--header, banner and breadcrumbs-->
+    <!---->
+    <main>
+        <article>
+            <h1>Lagar, regler, tillsyn</h1>
+            <img src="#" alt="Lag-symbol">
+            <p>För alla utbildningsformer finns det lagar och andra bestämmelser som måste följas. Det gäller till
+                exempel hur utbildningarna ska utformas, kursplaner, betygskriterier, examina, tillträde och avgifter
+            </p>
+            <p>
+                Här hittar du de <a href="#">lagar och förordningar</a> som reglerar de utbildningsformer som
+                Myndigheten för yrkeshögskolan ansvarar för. Här finns även de <a href="#">föreskrifter</a> som vi har
+                beslutat om, samt de allmäna råd vi har gett ut.
+            </p>
+            <p>
+                Genom <a href="#">tillsyn</a> kontrollerar myndigheten att utbildningarna följer de lagar och regler som
+                gäller. I menyn till höger kan du läsa om hur tillsynen går till och hitta tillsynsbeslut.
+            </p>
+            <p>
+                Om du anser att det finns brister i en utbildning kan du anmäla det till oss. <a href="#">Anmäl brister
+                    i en utbildning.</a>
+            </p>
+            <aside>
+                <section>
+                    <h3>
+                        Lagar, regler, tillsyn
+                    </h3>
+                    <ul>
+                        <li><a href="#">Lagar och förordningar</a></li>
+                        <li><a href="#">Gällande föreskrifter</a></li>
+                        <li><a href="#">Allmäna råd</a></li>
+                        <li><a href="#">Tillsyn</a></li>
+                        <li><a href="#">Kvalitetsgranskning</a></li>
+                        <li><a href="#">Anmäl brister i en utbildning</a></li>
+                    </ul>
+                </section>
+                <!-- style the link below as a button?-->
+                <a href="#">Anmäl brister i en utbildning</a>
+                <section>
+                    <h4>Dela</h4>
+                    <ul>
+                        <!--fill with font-awesome icons-->
+                        <li><i></i></li>
+                        <li><i></i></li>
+                        <li><i></i></li>
+                    </ul>
+                </section>
+            </aside>
+        </article>
+    </main>
+</body>
+
+</html>
