--- a/omOss.html
+++ b/omOss.html
@@ -1,1 +1,132 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Om Oss</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <div>
+             <a>
+                <h2>
+                    GD har ordet
+                </h2>
+            </a>
+        </div>
+        <div>
+            <a>
+                <h2>
+                    Hitta utbildningar
+                </h2>
+            </a>
+        </div>
+        <section>
+            <header>
+                <h1>
+                    Om oss
+                </h1>
+                <img href="https://www.myh.se/ServeImage.aspx?image=%2FGlobal%2FBildbank%2FAGoodId%2FAGoodId_original%2Fpenna2.jpg&width=584&height=0&method=Box" />
+                <h2>
+                    Myndigheten för yrkeshögskolans huvuduppdrag är att ansvara för frågor som rör yrkeshögskolan 
+                    i Sverige och verka för att utbildningarna tillgodoser arbetslivets behov av kompetens.
+                </h2>
+            </header>
+            <p>
+                Vi analyserar arbetsmarknadens behov av utbildningar inom yrkeshögskolan, beslutar vilka 
+                utbildningar som ska ingå i yrkeshögskolan och beviljar statliga medel till utbildningsanordnarna. 
+                Vi främjar även validering i utbildningarna.
+            </p>
+            <p>
+                Vi ansvarar också för frågor som rör vissa utbildningar som ligger utanför yrkeshögskolan - eftergymnasiala konst- 
+                och kulturutbildningar som bedrivs av fristående skolor samt tolkutbildningar inom folkbildningen.
+            </p>
+            <p>
+                Myndigheten utövar tillsyn och hanterar klagomål på de utbildningar som ligger inom vårt ansvarsområde. Vi 
+                granskar även utbildningarnas kvalitet, framställer statistik och följer upp utbildningars resultat.
+            </p>
+            <p>
+                Vi är också nationell samordningspunkt för EQF (European Qualifications Framework) som ska göra det lättare 
+                att jämföra utbildnings- och yrkeskvalifikationer inom EU.
+            </p>
+            <a>
+                <p>
+                    Läs mer om våra verksamhetsområden
+                </p>
+            </a>
+        </section>
+        <aside>
+            <h2>
+                Om oss
+            </h2>
+            <ul>
+                <li>
+                    <a>
+                        Organisation
+                    </a>
+                </li>
+                <li>
+                    <a>
+                        Så styrs myndigheten
+                    </a>
+                </li>
+                <li>
+                    <a>
+                        Redovisning av myndigheten
+                    </a>
+                </li>
+                <li>
+                    <a>
+                        MYH fyller 10 år!
+                    </a>
+                </li>
+                <li>
+                    <a>
+                        Remisser och yttranden
+                    </a>
+                </li>
+                <li>
+                   <a>
+                       Pågående upphandlingar
+                   </a> 
+                </li>
+                <li>
+                    <a>
+                        Fakturera oss
+                    </a>
+                </li>
+                <li>
+                    <a>
+                        Jobba hos oss
+                    </a>
+                </li>
+                <li>
+                    <a>
+                        Behandling av personuppgifter
+                    </a>
+                </li>
+            </ul>
+        </aside>
+        <aside>
+            <h2>
+                Yrkes-SM, EM och VM
+            </h2>
+            <p>
+                Som ansvarig myndighet för yrkeshögskoleutbildningarna
+                 i Sverige har vi ett naturligt engagemang i de yrkestävlingar som bedrivs.
+            </p>
+            <a>
+                <p>
+                    Läs mer om MYH:s roll i yrkestävlingarna
+                </p>
+            </a>
+        </aside>
+        <aside>
+            <h3>
+                Dela
+            </h3>
+            <a>Twitterbild</a>
+            <a>FB bild</a>
+            <a>Mejlikon</a>
+        </aside>
+    </body>
+</html>
