added information to hmtl

--- a/verksamhetsOmraden.html
+++ b/verksamhetsOmraden.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    
+</head>
+<body>
+    <h2>
+    Konst- och kulturutbildningar
+    </h2>
 
+    <p>
+        Inom konst- och kulturutbildningar finns det flera olika inriktningar 
+        som bildkonst, musik, teater, dans, mode,
+        skrivande, arkitektur, silversmide och keramik för att nämna några.
+    </p>
+    <h2>
+        Myndighetens uppgifter för konst- och kulturutbildningar
+    </h2>
+    <ul>
+        <li> Fatta beslut om vilka utbildningsanordnare som ska beviljas statligt stöd (statsbidrag och/eller
+        studiestödsberättigande) </li>
+        <li> Göra tillsyn </li>
+        <li> Granska utbildningarnas kvalitet</li>
+        <li> Framställa statistik</li>
+        <li> Främja utvecklingen och kvaliteten i utbildningarna</li>
+    </ul>
+
+    <footer>
+        E-post
+        Allmänna frågor/synpunkter: info@myh.se
+        Registrator: registrator@myh.se
+    </footer>
+</body>
+</html>
