added most html elements

--- a/kontakt.html
+++ b/kontakt.html
@@ -1,1 +1,167 @@
+<!DOCTYPE html>
 
+<html>
+
+<head>
+    <title>
+        Kontakt
+    </title>
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <section>
+        <h1>
+            Kontakta oss
+        </h1>
+        <img src="https://www.myh.se/ServeImage.aspx?image=%2FGlobal%2FIllustrationer%2FKontakt.png&width=584&height=0&method=Box" />
+        <p class="largerText">
+            Här hittar du kontaktuppgifter till oss på Myndigheten för yrkeshögskolan.
+        </p>
+    </section>
+    <section>
+        <h2>
+            Bra att veta innan du kontaktar oss
+        </h2>
+        <p>
+            Myndigheten för yrkeshögskolan är en statlig myndighet. Det du skickar till oss via e-post, post eller
+             fax blir därför en allmän handling. Vi registrerar allmänna handlingar och sparar dem i vårt diarium.
+        </p>
+    </section>
+    <section>
+        <h2>
+            Kundforum
+        </h2>
+        <p>
+            Se vanliga frågor och svar samt ställ dina frågor i vårt <a href=#>digitala frågeforum.</a>
+        </p>
+    </section>
+    <section>
+        <h2>
+            Telefon
+        </h2>
+        <p>
+            Ring vår växel <a href="tel:010-209 01 00">010-209 01 00</a> så hjälper vi dig med ditt ärende!
+        </p>
+        <p>
+            Växeln är öppen vardagar kl 9.00-11.30, 13.00-15.00.    
+        </p>
+    </section>
+    <section>
+        <h2>
+            E-post
+        </h2>
+        <p>
+            Allmänna frågor/synpunkter: <a href="email:info@myh.se">info@myh.se</a>
+        </p>
+        <p>
+            Registrator: <a href="registrator@myh.se">registrator@myh.se</a>
+        </p>
+        <p>
+            Webbfrågor: <a href="webbredaktionen@myh.se">webbredaktionen@myh.se</a>
+        </p>
+        <p>
+            Personlig e-post enligt fornamn.efternamn@myh.se
+        </p>
+    </section>
+    <section>
+        <h2>
+            Postadress Västerås
+        </h2>
+        <p>
+            Myndigheten för yrkeshögskolan
+        </p>
+        <p>
+            Box 145
+        </p>
+        <p>
+            721 05 Västerås
+        </p>
+    </section>
+    <section>
+        <h2>
+            Besöksadress Västerås
+        </h2>
+        <p>
+            Ingenjör Bååths gata 19
+722 12 Västerås
+Öppettider v. 26-33, 09.00-11.00.
+Öppettider: Helgfri måndag-fredag kl 09.00-15.00 med lunchstängt 12.00-13.00.
+Begränsad öppettid: v. 26-33 kl. 09.00-11.00
+        </p>
+        <p>
+            Ingenjör Bååths gata 19
+        </p>
+        <p>
+            722 12 Västerås
+        </p>
+        <p>
+            Öppettider v. 26-33, 09.00-11.00.
+        </p>
+        <p>
+            Öppettider: Helgfri måndag-fredag kl 09.00-15.00 med lunchstängt 12.00-13.00.
+        </p>
+        <p>
+            Begränsad öppettid: v. 26-33 kl. 09.00-11.00
+        </p>
+    </section>
+    <section>
+        <h2>
+            Postadress Hässleholm
+        </h2>
+        <p>
+            Myndigheten för yrkeshögskolan
+        </p>
+        <p>
+            Box 85
+        </p>
+        <p>
+            281 21 Hässleholm
+        </p>
+    </section>
+    <section>
+        <h2>
+            Besöksadress Hässleholm
+        </h2>
+        <p>
+            Frykholmsgatan 10
+        </p>
+        <p>
+            281 31 Hässleholm
+        </p>
+    </section>
+    <section>
+        <h2>
+            Organisationsnummer
+        </h2>
+        <p>
+            202100-6230
+        </p>
+    </section>
+    <section>
+        <h2>
+            Skicka faktura
+        </h2>
+        <p>
+            Från och med den 1 april 2019 blir det lag på att alla inköp i offentlig sektor ska faktureras 
+            med elektronisk faktura (e-faktura). <a href=#>Läs här om hur du kan fakturera oss elektroniskt.</a>
+        </p>
+    </section>
+    <section>
+        <h2>
+            Pressjour
+        </h2>
+        <p>
+            Besök vårt <a href=#>nyhetsrum</a> eller ring <a href="tel:010-2090173">010-209 01 73</a>. 
+        </p>
+    </section>
+    
+        <iframe
+            src="https://maps.google.se/maps/ms?msa=0&amp;msid=208106955202648480291.0004b2df7f01bd721b100&amp;ie=UTF8&amp;t=m&amp;vpsrc=6&amp;ll=58.813742,14.194336&amp;spn=9.11878,20.610352&amp;z=5&amp;output=embed"
+            width="470" height="400">
+        </iframe>
+        <a href=#>Visa Myndigheten för yrkeshögskolan på en större karta</a>
+</body>
+
+</html>
