added the rest of the html element. Now all html is in place on kontakt

--- a/kontakt.html
+++ b/kontakt.html
@@ -162,6 +162,35 @@ Begränsad öppettid: v. 26-33 kl. 09.00-11.00
             width="470" height="400">
         </iframe>
         <a href=#>Visa Myndigheten för yrkeshögskolan på en större karta</a>
+        <div>
+            <a>
+               <h2>
+                   Hitta utbildningar
+               </h2>
+           </a>
+       </div>
+        <div>
+            <a>
+               <h2>
+                   Anmäl brister i en utbildning
+               </h2>
+           </a>
+       </div>
+       <div>
+           <a>
+               <h2>
+                   Jobba hos oss
+               </h2>
+           </a>
+       </div>
+        <aside>
+            <h3>
+                Dela
+            </h3>
+            <a>Twitterbild</a>
+            <a>FB bild</a>
+            <a>Mejlikon</a>
+        </aside>
 </body>
 
 </html>
