Added sass vars

--- a/publikationer.html
+++ b/publikationer.html
@@ -12,9 +12,9 @@
     <div class="grid gap">
         <div class="col-2-3">
             <div class="grid gap">
-                <div>Hej</div>
-                <div>Hej</div>
-                <div>Hej</div>
+                <div>div</div>
+                <div>div</div>
+                <div>div</div>
             </div>
             
             <h1>Publikationer</h1>
@@ -88,7 +88,7 @@
             </aside>
         </div>
         <div class="col-2-3">
-            hej
+            div        
         </div>
     </div>
 </body>
