--- a/statistik.html
+++ b/statistik.html
@@ -1,1 +1,70 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Statistik</title>
+</head>
+<body>
+<main>    <header></header>
+    <aside>
+        <ul>
+        <li><a href="#">Yrkeshögskoleutbildningar</a></li>
+        <li>Statistik om konst- och kulturutbildningar och utbildningar med endast tillsyn</li>
+        <li>Statistik om tolkutbildningar</li>
+    </ul>
+    </aside>
+    <section>
+           <ol>
+            <li a href="#">Start</li> 
+            <li> > </li>
+            <li>Statistik</li>
+        </ol> 
+        </section> 
+        <section>
+            <h1>Statistik</h1>  
+       <img src="#" alt="">
+       <article>
+           <p>
+            Här hittar du statistik om yrkeshögskoleutbildningar, konst- och kulturutbildningar och utbildningar med endast tillsyn samt tolkutbildningar inom folkbildningen.
 
+            Yrkeshögskoleutbildningar omfattar både yrkeshögskoleutbildning (YH) och kvalificerad yrkesutbildning (KY).
+            
+            Klicka på den utbildningsform du är intresserad av i menyn till höger.
+           </p>
+           <article>
+               <p>
+                <h2>Faktablad med statistik </h2>
+                Här kan du ladda ner faktablad med kortfattad statistik om yrkeshögskole-
+                utbildningar, konst- och kulturutbildningar samt tolkutbildningar.
+                <hr>
+                <a href="https://www.myh.se/Documents/Statitik/Yrkesh%c3%b6gskoleutbildningar/Kortfattad%20statistik/Kortfattad_statistik_yrkeshogskolan_2019.pdf">Faktablad med kortfattad statistik om yrkeshögskolan 2019</a>
+                <hr>
+                <a href="https://www.myh.se/Documents/Statitik/Konst-och%20kulturutbildningar%20och%20vissa%20andra%20utbildningar/Konst-%20och%20kulturutbildningar/Kortfattad%20statistik/Kortfattad_statistik_konstkulturutbildningar_2019.pdf">Faktablad med kortfattad statistik om konst- och kulturutbildningar 2019</a>
+                <hr>
+                <a href="https://www.myh.se/Documents/Statitik/Tolkutbildningar%20inom%20folkbildningen/Kortfattad%20statistik/Kortfattad_statistik_tolkutbildningar_2019.pdf">Faktablad med kortfattad statistik om tolkutbildningar 2019</a>
+               </p>
+           </article>
+           <article>
+                <h2>Statistiska årsrapporter</h2>
+                 <p>
+                Via länkarna nedan hittar du Myndigheten för yrkeshögskolans senaste årsrapporter med samlad statistik om de utbildningsformer som vi ansvarar för.
+                <hr>
+                <a href="https://www.myh.se/Publikationer/2020/Statistisk-arsrapport-2020/">Statistisk årsrapport 2020</a>
+                <hr>
+                <a href="https://www.myh.se/Publikationer/2019/Statistisk-arsrapport-2019/">Statistisk årsrapport 2019</a>
+                <hr>
+                <a href="https://www.myh.se/Publikationer/2018/Statistisk-arsrapport-2018/">Statistisk årsrapport 2018</a>
+                <hr>
+                <a href="https://www.myh.se/Publikationer/2017/Statistisk-arsrapport-2017/">Statistisk årsrapport 2017</a>
+                </p>
+           </article>
+       </article>
+    </section>
+</main>
+</body>
+
+
+
+
+</html>
