--- a/publikationer/publikationer.html
+++ b/publikationer/publikationer.html
@@ -1,96 +1,121 @@
 <!DOCTYPE html>
 <html lang="sv">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Publikationer</title>
-    <link href="/css/style.css" rel="stylesheet">
-</head>
+    <link href="/css/style.css" rel="stylesheet" />
+  </head>
 
-<body>
+  <body>
     <div class="grid gap">
-        <div class="col-2-3">
-            <div class="grid gap">
-                <div>div</div>
-                <div>div</div>
-                <div>div</div>
-            </div>
-            
-            <h1>Publikationer</h1>
-            <p>Här hittar du Myndigheten för yrkeshögskolans rapporter, faktablad, broschyrer, informationsblad och
-                andra publikationer. Du kan välja typ av publikation, område och utgivningsår i rutan.</p>
-
-            <ul>
-                <li>
-                    <h2>Handbok för tillträde till yrkeshögskolan - 2020</h2>
-                    <p>Utgiven: <time>2020-07-10</time></p>
-                    <p>Denna handbok vänder sig i första hand till de som bedriver yrkeshögskoleutbildning och behöver
-                        stöd...</p>
-                    <p><a
-                            href="https://www.myh.se/Documents/Publikationer/HandbokForTilltrade_reviderat_5juni2020_justerad_200703.pdf">Handbok
-                            för tillträde till yrkeshögskolan - 2020</a></p>
-                </li>
-                <li>
-                    <h2>Kvalitetskriterier för validering - yrkeshögskoleutbildning, konst- och kulturutbildningar och
-                        tolkutbildning inom folkbildningen</h2>
-                    <p>Utgiven: <time>2020-06-09</time></p>
-                    <p>Myndigheten har tagit fram kvalitetskriterier för arbetet med validering inom de
-                        utbildningsformer som...</p>
-                    <p><a href="https://www.myh.se/Documents/Publikationer/Kvalitetskriterier_validering.pdf">Kvalitetskriterier
-                            för validering</a></p>
-                </li>
-                <li>
-                    <h2>Områdesanalys hälso- och sjukvård samt socialt arbete</h2>
-                    <p>Utgiven: <time>2020-05-19</time></p>
-                    <p>Områdesanalysen är framtagen av Myndigheten för yrkeshögskolan som ett underlag för de
-                        handläggare som...</p>
-                    <p><a href="https://www.myh.se/Documents/Publikationer/Rapporter/2020/Analys_HalsoSjukvard2020.pdf">Ladda
-                            ner områdesanalysen här</a></p>
-                </li>
-                <li>
-                    <h2>Områdesanalys industri</h2>
-                    <p>Utgiven: <time>2020-05-14</time></p>
-                    <p>Områdesanalysen är framtagen av Myndigheten för yrkeshögskolan som ett underlag för de
-                        handläggare som...</p>
-                    <p><a href="https://www.myh.se/Documents/Publikationer/Rapporter/2020/Industri-Analys2020.pdf">Ladda
-                            ner områdesanalysen här</a></p>
-                </li>
-            </ul>
+      <div class="col-2-3">
+        <div class="grid gap">
+          <div>div</div>
+          <div>div</div>
+          <div>div</div>
         </div>
-        <div>
-            <aside>
-                <h3>Visa träffar av publikationstyp</h3>
-                <ul>
-                    <li>Rapporter</li>
-                    <li>Återrapportering av regeringsuppdrag</li>
-                    <li>Informationsmaterial</li>
-                    <li>Årsredovisningar</li>
-                </ul>
 
-                <h3>Visa träffar från verksamhetsområde</h3>
-                <ul>
-                    <li>Yrkeshögskolan</li>
-                    <li>Konst- och kulturutbildningar</li>
-                    <li>Tolkutbildningar</li>
-                </ul>
+        <h1>Publikationer</h1>
+        <p>
+          Här hittar du Myndigheten för yrkeshögskolans rapporter, faktablad,
+          broschyrer, informationsblad och andra publikationer. Du kan välja typ
+          av publikation, område och utgivningsår i rutan.
+        </p>
 
-                <h3>Visa träffar från år</h3>
-                <ul>
-                    <li>Alla år</li>
-                    <li>2020</li>
-                    <li>2019</li>
-                    <li>2018</li>
-                    <li>2017</li>
-                    <li>2016</li>
-                    <li>2015</li>
-                </ul>
-            </aside>
-        </div>
-        <div class="col-2-3">
-            div        
-        </div>
+        <ul>
+          <li>
+            <h2>Handbok för tillträde till yrkeshögskolan - 2020</h2>
+            <p>Utgiven: <time>2020-07-10</time></p>
+            <p>
+              Denna handbok vänder sig i första hand till de som bedriver
+              yrkeshögskoleutbildning och behöver stöd...
+            </p>
+            <p>
+              <a
+                href="https://www.myh.se/Documents/Publikationer/HandbokForTilltrade_reviderat_5juni2020_justerad_200703.pdf"
+                >Handbok för tillträde till yrkeshögskolan - 2020</a
+              >
+            </p>
+          </li>
+          <li>
+            <h2>
+              Kvalitetskriterier för validering - yrkeshögskoleutbildning,
+              konst- och kulturutbildningar och tolkutbildning inom
+              folkbildningen
+            </h2>
+            <p>Utgiven: <time>2020-06-09</time></p>
+            <p>
+              Myndigheten har tagit fram kvalitetskriterier för arbetet med
+              validering inom de utbildningsformer som...
+            </p>
+            <p>
+              <a
+                href="https://www.myh.se/Documents/Publikationer/Kvalitetskriterier_validering.pdf"
+                >Kvalitetskriterier för validering</a
+              >
+            </p>
+          </li>
+          <li>
+            <h2>Områdesanalys hälso- och sjukvård samt socialt arbete</h2>
+            <p>Utgiven: <time>2020-05-19</time></p>
+            <p>
+              Områdesanalysen är framtagen av Myndigheten för yrkeshögskolan som
+              ett underlag för de handläggare som...
+            </p>
+            <p>
+              <a
+                href="https://www.myh.se/Documents/Publikationer/Rapporter/2020/Analys_HalsoSjukvard2020.pdf"
+                >Ladda ner områdesanalysen här</a
+              >
+            </p>
+          </li>
+          <li>
+            <h2>Områdesanalys industri</h2>
+            <p>Utgiven: <time>2020-05-14</time></p>
+            <p>
+              Områdesanalysen är framtagen av Myndigheten för yrkeshögskolan som
+              ett underlag för de handläggare som...
+            </p>
+            <p>
+              <a
+                href="https://www.myh.se/Documents/Publikationer/Rapporter/2020/Industri-Analys2020.pdf"
+                >Ladda ner områdesanalysen här</a
+              >
+            </p>
+          </li>
+        </ul>
+      </div>
+      <div>
+        <aside>
+          <h3>Visa träffar av publikationstyp</h3>
+          <ul>
+            <li>Rapporter</li>
+            <li>Återrapportering av regeringsuppdrag</li>
+            <li>Informationsmaterial</li>
+            <li>Årsredovisningar</li>
+          </ul>
+
+          <h3>Visa träffar från verksamhetsområde</h3>
+          <ul>
+            <li>Yrkeshögskolan</li>
+            <li>Konst- och kulturutbildningar</li>
+            <li>Tolkutbildningar</li>
+          </ul>
+
+          <h3>Visa träffar från år</h3>
+          <ul>
+            <li>Alla år</li>
+            <li>2020</li>
+            <li>2019</li>
+            <li>2018</li>
+            <li>2017</li>
+            <li>2016</li>
+            <li>2015</li>
+          </ul>
+        </aside>
+      </div>
+      <div class="col-2-3">div</div>
     </div>
-</body>
-
+  </body>
 </html>
