--- a/lagarReglerTillsyn/lagarReglerTillsyn.html
+++ b/lagarReglerTillsyn/lagarReglerTillsyn.html
@@ -121,6 +121,7 @@
         </aside>
       </article>
     </main>
+    <!--footer below-->
      <footer class="footer">
       <section class="kontakt-list">
         <h3>Kontakt</h3>
