--- a/index/index.html
+++ b/index/index.html
@@ -70,14 +70,14 @@
     />
     <section>
       <h2>Verksamhetsområden</h2>
-      <ul>
+      <!-- <ul>
         <li><a href="#">Yrkeshögskolan</a>/li></li>
         <li><a href="#">Konst- och kulturutbildningar</a></li>
         <li><a href="#">Tolkutbildningar</a></li>
         <li><a href="#">Utbildningar med endast tillsyn</a></li>
         <li><a href="#">SeQF</a></li>
         <li><a href="#">Validering</a></li>
-      </ul>
+      </ul> -->
     </section>
     <!--MAIN HERE? OR ABOVE INCLUDING VERKSAM. AND HERO IMG?-->
     <main class="grid">
@@ -288,7 +288,7 @@
         </section>
       </div>
         <div>
-        <section class="card">
+        <!-- <section class="card">
           <h3>Gå direkt till</h3>
           <ul>
             <li><a href="#">Lediga jobb</a></li>
@@ -297,8 +297,8 @@
             <li><a href="#">Nyheter</a></li>
             <li><a href="#">Nyhetsbrev</a></li>
           </ul>
-        </section>
-        <section class="card">
+        </section> -->
+        <!-- <section class="card">
           <h3>Senaste publikationer</h3>
           <ul>
             <li>
@@ -318,7 +318,7 @@
             </li>
           </ul>
           <a href="#">Fler publikationer &gt;</a>
-        </section>
+        </section> -->
         <section class="card">
           <div><a href="#">Anmäl brister i en utbildning</a></div>
           <div><a href="#">Hitta utbildningar</a></div>
