Added hero image and other components

--- a/index/index.html
+++ b/index/index.html
@@ -54,6 +54,11 @@
         <button type="submit">Sök</button>
       </div>
     </div>
+    <div class="hero-img">
+      <h1>Välkommen till myh.se!</h1>
+
+      <a href="#" class="button primary">Våra verksamhetsområden</a>
+    </div>
     <div id="breadcrumbs">
       <p>
         <a href="#">Start</a>
@@ -84,7 +89,7 @@
       <div class="card col-2-3 apply">
         <section>
           <h3>Ansök om att bedriva utbildning</h3>
-          <ul>
+          <ul class="page-nav">
             <li><a href="#">Yrkeshögskoleutbildning</a></li>
             <li><a href="#">Konst- och kulturutbildning</a></li>
             <li><a href="#">Tolkutbildning</a></li>
