--- a/kontakt/kontakt.html
+++ b/kontakt/kontakt.html
@@ -8,10 +8,12 @@
     </title>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/grid.css">
+    <link rel="stylesheet" href="../templates/headerStyle.css" />
 </head>
 
 <body>
-    <section>
+    <section class="darkSec">
         <h1>
             Kontakta oss
         </h1>
@@ -20,7 +22,7 @@
             Här hittar du kontaktuppgifter till oss på Myndigheten för yrkeshögskolan.
         </p>
     </section>
-    <section>
+    <section class="darkSec">
         <h2>
             Bra att veta innan du kontaktar oss
         </h2>
@@ -29,6 +31,7 @@
              fax blir därför en allmän handling. Vi registrerar allmänna handlingar och sparar dem i vårt diarium.
         </p>
     </section>
+    <div class="grid gap">
     <section>
         <h2>
             Kundforum
@@ -65,6 +68,7 @@
             Personlig e-post enligt fornamn.efternamn@myh.se
         </p>
     </section>
+    <div class="twoByTwo">   
     <section>
         <h2>
             Postadress Västerås
@@ -91,13 +95,16 @@
             722 12 Västerås
         </p>
         <p>
-            Öppettider v. 26-33, 09.00-11.00.
-        </p>
-        <p>
-            Öppettider: Helgfri måndag-fredag kl 09.00-15.00 med lunchstängt 12.00-13.00.
-        </p>
-        <p>
             Begränsad öppettid: v. 26-33 kl. 09.00-11.00
+        </p>
+        <p>
+            Öppettider: 
+        </p>
+        <p>
+            Helgfri måndag-fredag kl 09.00-15.00
+        </p>
+        <p>
+            Lunchstängt 12.00-13.00
         </p>
     </section>
     <section>
@@ -125,6 +132,9 @@
             281 31 Hässleholm
         </p>
     </section>
+</div>
+
+
     <section>
         <h2>
             Organisationsnummer
@@ -150,34 +160,38 @@
             Besök vårt <a href=#>nyhetsrum</a> eller ring <a href="tel:010-2090173">010-209 01 73</a>. 
         </p>
     </section>
-    
+</div>
+<div id="map">
         <iframe
             src="https://maps.google.se/maps/ms?msa=0&amp;msid=208106955202648480291.0004b2df7f01bd721b100&amp;ie=UTF8&amp;t=m&amp;vpsrc=6&amp;ll=58.813742,14.194336&amp;spn=9.11878,20.610352&amp;z=5&amp;output=embed"
             width="470" height="400">
         </iframe>
+        <br />
         <a href=#>Visa Myndigheten för yrkeshögskolan på en större karta</a>
-        <div>
+    </div>
+    <div class="sideSet">
+        <div class="card">
             <a>
                <h2>
                    Hitta utbildningar
                </h2>
            </a>
        </div>
-        <div>
+        <div class="card">
             <a>
                <h2>
                    Anmäl brister i en utbildning
                </h2>
            </a>
        </div>
-       <div>
+       <div class="card">
            <a>
                <h2>
                    Jobba hos oss
                </h2>
            </a>
        </div>
-        <aside>
+        <aside class="card">
             <h3>
                 Dela
             </h3>
@@ -185,6 +199,7 @@
             <a>FB bild</a>
             <a>Mejlikon</a>
         </aside>
+    </div>
 </body>
 
 </html>
