--- a/index/index.html
+++ b/index/index.html
@@ -84,7 +84,7 @@
       <div class="card col-2-3 apply">
         <section>
           <h3>Ansök om att bedriva utbildning</h3>
-          <ul>
+          <ul class="page-nav">
             <li><a href="#">Yrkeshögskoleutbildning</a></li>
             <li><a href="#">Konst- och kulturutbildning</a></li>
             <li><a href="#">Tolkutbildning</a></li>
