updated html verksamhetsOmraden.html

--- a/verksamhetsOmraden/verksamhetsOmraden.html
+++ b/verksamhetsOmraden/verksamhetsOmraden.html
@@ -1,18 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/templates/footer/footer.css" />
+    <link rel="stylesheet" href="/templates/header/headerStyle.css" />
     <title>Document</title>
-    
+
 </head>
+
 <body>
+    <header class="topHeader">
+        <img id="biglogo" src="/templates/header/myh_logo_white_big_shaded.png">
+        <img id="smalllogo" src="/templates/header/myh_logo_white_big_shaded_small.png">
+        <label for="ham-check" id="hamburger">&#9776</label>
+        <input type="checkbox" name="ham-check" id="ham-check">
+        <ul class="navSticky">
+            <li class="navItem"><a href="index.html">Start</a></li>
+            <li class="navItem"><a href="omOss.html">Om oss</a></li>
+            <li class="navItem">
+                <a href="verksamhetsOmraden.html">Verksamhetsområden</a>
+            </li>
+            <li class="navItem">
+                <a href="lagarReglerTillsyn.html">Lagar, Regler, Tillsyn</a>
+            </li>
+            <li class="navItem"><a href="statistik.html">Statistik</a></li>
+            <li class="navItem"><a href="publikationer.html">Publikationer</a></li>
+            <li class="navItem"><a href="nyhetsrum.html">Nyhetsrum</a></li>
+            <li class="navItem"><a href="kontakt.html">Kontakt</a></li>
+        </ul>
+    </header>
+    <div role="banner" id="banner">
+        <ul>
+            <li><a href="#">In English</a></li>
+            <li><a href="#">Lättläst</a></li>
+            <li><a href="#">Anpassa</a></li>
+            <li><a href="#">Mina sidor</a></li>
+        </ul>
+        <div>
+            <label for="searchField"><i></i></label>
+            <input type="search" name="searchField" placeholder="Ange sökord" />
+            <button type="submit">Sök</button>
+        </div>
+    </div>
+    <div id="breadcrumbs">
+        <p>
+            <a href="#">Start</a>
+            <a href="#">Nästa </a>
+            <a href="#">Nästa </a>
+            <a href="#">Nästa </a>
+            <a href="#">Nästa </a>
+        </p>
+    </div>
     <h2>
-    Konst- och kulturutbildningar
+        Konst- och kulturutbildningar
     </h2>
+    <section class="icons card">
+        <!-- the 'card' class above might not work properly, it doesn't matter to the template that much -->
+        <h4>Dela</h4>
+        <ul>
+            <!--fill with font-awesome icons-->
+            <li><i class="fab fa-facebook-f"></i></li>
+            <li><i class="fab fa-twitter"></i></li>
+            <li><i class="far fa-envelope"></i></li>
+        </ul>
+    </section>
 
     <p>
-        Inom konst- och kulturutbildningar finns det flera olika inriktningar 
+        Inom konst- och kulturutbildningar finns det flera olika inriktningar
         som bildkonst, musik, teater, dans, mode,
         skrivande, arkitektur, silversmide och keramik för att nämna några.
     </p>
@@ -21,7 +78,7 @@
     </h2>
     <ul>
         <li> Fatta beslut om vilka utbildningsanordnare som ska beviljas statligt stöd (statsbidrag och/eller
-        studiestödsberättigande) </li>
+            studiestödsberättigande) </li>
         <li> Göra tillsyn </li>
         <li> Granska utbildningarnas kvalitet</li>
         <li> Framställa statistik</li>
@@ -29,9 +86,77 @@
     </ul>
 
     <footer>
-        E-post
-        Allmänna frågor/synpunkter: info@myh.se
-        Registrator: registrator@myh.se
+        <!-- flex footer-->
+        <footer class="footer">
+            <section class="kontakt-list">
+                <h3>Kontakt</h3>
+                <ul>
+                    <li>
+                        <h4>Digitalt kundforum</h4>
+                        <p>
+                            Har du en fråga? Besök vårt kundforum,
+                            <a href="#">forum.myh.se</a>
+                        </p>
+                    </li>
+                    <li>
+                        <h4>Telefon</h4>
+                        <p>
+                            Ring vår växel
+                            <a href="tel: 010-2090100"> 010-209 01 00</a>. Växeln är öppen
+                            vardagar 9.00 - 11.30, 13.00 - 15.00
+                        </p>
+                    </li>
+                    <li>
+                        <h4>Press</h4>
+                        <p>
+                            Presskontakter och pressmeddelanden finns i vårt
+                            <a href="nyhetsrum.html">nyhetsrum</a>
+                        </p>
+                    </li>
+                    <li>
+                        <h4>E-post</h4>
+                        <p>
+                            Allmänna frågor/synpunkter:
+                            <a href="mailto: info@myh.se">info@myh.se</a>
+                            <br />
+                            Registrator:
+                            <a href="mailto: registrator@myh.se">registrator@myh.se</a>
+                        </p>
+                    </li>
+                    <li>
+                        <h4>Adress</h4>
+                        <p>
+                            Myndigheten för yrkeshögskolan <br />
+                            Box 145 <br />
+                            721 05 Västerås
+                        </p>
+                    </li>
+                </ul>
+            </section>
+            <section class="about-list-footer">
+                <h3>Om webbplatsen</h3>
+                <ul>
+                    <li><a href="#">Använda webbplatsen</a></li>
+                    <li><a href="#">Om webbkakor (cookies)</a></li>
+                    <li><a href="#">Webbkarta</a></li>
+                    <li><a href="#">Tillgänglighetsredogörelse</a></li>
+                </ul>
+                <h3>Våra övriga webbplatser</h3>
+                <ul>
+                    <li><a href="#">www.yrkeshogskolan.se</a></li>
+                    <li><a href="#">www.konstkulturutbildning.se</a></li>
+                    <li><a href="#">www.blitolk.nu</a></li>
+                    <li><a href="#">www.seqf.se</a></li>
+                </ul>
+                <h3>Håll dig informerad</h3>
+                <h4>
+                    <a><i class="fa fa-youtube"></i>Youtube</a>
+                </h4>
+                <h4>Ansvarig utgivare</h4>
+                <p>Thomas Persson, generaldirektör MYH.</p>
+            </section>
+        </footer>
     </footer>
 </body>
+
 </html>
