--- a/index/index.html
+++ b/index/index.html
@@ -299,6 +299,74 @@
       </section>
     </main>
     <!--footer below-->
-    <object style="width: 100%; height: 590px; border: 0;" type="text/html" data="../templates/footer/footer.html"></object>
+    <footer class="footer">
+      <section class="kontakt-list">
+        <h3>Kontakt</h3>
+        <ul>
+          <li>
+            <h4>Digitalt kundforum</h4>
+            <p>
+              Har du en fråga? Besök vårt kundforum,
+              <a href="#">forum.myh.se</a>
+            </p>
+          </li>
+          <li>
+            <h4>Telefon</h4>
+            <p>
+              Ring vår växel
+              <a href="tel: 010-2090100"> 010-209 01 00</a>. Växeln är öppen
+              vardagar 9.00 - 11.30, 13.00 - 15.00
+            </p>
+          </li>
+          <li>
+            <h4>Press</h4>
+            <p>
+              Presskontakter och pressmeddelanden finns i vårt
+              <a href="nyhetsrum.html">nyhetsrum</a>
+            </p>
+          </li>
+          <li>
+            <h4>E-post</h4>
+            <p>
+              Allmänna frågor/synpunkter:
+              <a href="mailto: info@myh.se">info@myh.se</a>
+              <br />
+              Registrator:
+              <a href="mailto: registrator@myh.se">registrator@myh.se</a>
+            </p>
+          </li>
+          <li>
+            <h4>Adress</h4>
+            <p>
+              Myndigheten för yrkeshögskolan <br />
+              Box 145 <br />
+              721 05 Västerås
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section class="about-list-footer">
+        <h3>Om webbplatsen</h3>
+        <ul>
+          <li><a href="#">Använda webbplatsen</a></li>
+          <li><a href="#">Om webbkakor (cookies)</a></li>
+          <li><a href="#">Webbkarta</a></li>
+          <li><a href="#">Tillgänglighetsredogörelse</a></li>
+        </ul>
+        <h3>Våra övriga webbplatser</h3>
+        <ul>
+          <li><a href="#">www.yrkeshogskolan.se</a></li>
+          <li><a href="#">www.konstkulturutbildning.se</a></li>
+          <li><a href="#">www.blitolk.nu</a></li>
+          <li><a href="#">www.seqf.se</a></li>
+        </ul>
+        <h3>Håll dig informerad</h3>
+        <h4>
+          <a><i class="fa fa-youtube"></i>Youtube</a>
+        </h4>
+        <h4>Ansvarig utgivare</h4>
+        <p>Thomas Persson, generaldirektör MYH.</p>
+      </section>
+    </footer>
   </body>
 </html>
