changes some styles in index, makes hero-btn-link bigger in components

--- a/index/index.html
+++ b/index/index.html
@@ -27,18 +27,18 @@
       <label for="ham-check" id="hamburger">&#9776</label>
       <input type="checkbox" name="ham-check" id="ham-check" />
       <ul class="navSticky">
-        <li class="navItem"><a href="index.html">Start</a></li>
-        <li class="navItem"><a href="omOss.html">Om oss</a></li>
+        <li class="navItem"><a href="/index/index.html">Start</a></li>
+        <li class="navItem"><a href="/omOss/omOss.html">Om oss</a></li>
         <li class="navItem">
-          <a href="verksamhetsOmraden.html">Verksamhetsområden</a>
+          <a href="/verksamhetsOmraden/verksamhetsOmraden.html">Verksamhetsområden</a>
         </li>
         <li class="navItem">
-          <a href="lagarReglerTillsyn.html">Lagar, Regler, Tillsyn</a>
+          <a href="/lagarReglerTillsyn/lagarReglerTillsyn.html">Lagar, Regler, Tillsyn</a>
         </li>
-        <li class="navItem"><a href="statistik.html">Statistik</a></li>
-        <li class="navItem"><a href="publikationer.html">Publikationer</a></li>
-        <li class="navItem"><a href="nyhetsrum.html">Nyhetsrum</a></li>
-        <li class="navItem"><a href="kontakt.html">Kontakt</a></li>
+        <li class="navItem"><a href="/statistik/statistik.html">Statistik</a></li>
+        <li class="navItem"><a href="/publikationer/publikationer.html">Publikationer</a></li>
+        <li class="navItem"><a href="/nyhetsRum/nyhetsRum.html">Nyhetsrum</a></li>
+        <li class="navItem"><a href="/kontakt/kontakt.html">Kontakt</a></li>
       </ul>
     </header>
     <div role="banner" id="banner">
@@ -64,17 +64,12 @@
     <div id="breadcrumbs">
       <p>
         <a href="#">Start</a>
+        <!-- <a href="#">Nästa </a>
         <a href="#">Nästa </a>
         <a href="#">Nästa </a>
-        <a href="#">Nästa </a>
-        <a href="#">Nästa </a>
+        <a href="#">Nästa </a> -->
       </p>
     </div>
-    <img
-      src="#"
-      alt="Scrolling Hero Image"
-      title="Tillfälliga händelser på myndigheten"
-    />
     <section>
       <h2>Verksamhetsområden</h2>
       <!-- <ul>
@@ -100,7 +95,7 @@
         </section>
         <section>
           <h3>För dig som bedriver utbildning</h3>
-          <ul>
+          <ul class="page-nav">
             <li>
               <a href="#">Frågor och svar med anledning av coronaviruset</a>
             </li>
@@ -118,7 +113,7 @@
         </section>
         <section>
           <h3>För företag och organisationer</h3>
-          <ul>
+          <ul class="page-nav">
             <p>
               Arbetslivet är den främsta drivkraften bakom vilka
               yrkeshögskoleutbildningar som startar och hur de är upplagda.
@@ -286,10 +281,10 @@
           <a href="#">Fler publikationer &gt;</a>
         </section> -->
         <section class="links">
-          <a href="#" class="card">Anmäl brister i en utbildning</a>
-          <a href="#" class="card">Hitta utbildningar</a>
-          <a href="#" class="card">För dig som är vägledare</a>
-          <a href="#" class="card">Lediga jobb</a>
+          <a href="#" class="card button large">Anmäl brister i en utbildning</a>
+          <a href="#" class="card button large">Hitta utbildningar</a>
+          <a href="#" class="card button large">För dig som är vägledare</a>
+          <a href="#" class="card button large">Lediga jobb</a>
         </section>
       </div>
       <section class="otherlinks">
