--- a/nyhetsRum/nyhetsRum.html
+++ b/nyhetsRum/nyhetsRum.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="/templates/footer/footer.css"/>
     <link rel="stylesheet" href="/templates/header/headerStyle.css"/>
     <link rel="stylesheet" href="nyhetsRum.css"/>
+    <script
+      src="https://kit.fontawesome.com/061e52cdfe.js"
+      crossorigin="anonymous"
+    ></script>
 </head>
 
 <body>
@@ -126,7 +130,7 @@
         <div>
             <aside class="sidebar">
                 <h3>Nyhetsrum</h3>
-                <ul class="page-nav">
+                <ul>
                     <li><a href="#">Nyheter</a></li>
                     <li><a href="#">Pressmeddelande</a></li>
                     <li><a href="#">Kalender</a></li>
@@ -135,7 +139,7 @@
                     <li><a href="#">Nyhetbrev</a></li>
                 </ul>
                 <h3>Presskontakt</h3>
-                <ul class="page-nav">
+                <ul>
                     <li>Johan Lindahl</li>
                     <li>Telefon: 010-209 01 73</li>
                     <li>E-post: johan.lindahl@myh.se</li>
@@ -155,7 +159,7 @@
       <li><i class="fab fa-twitter"></i></li>
       <li><i class="far fa-envelope"></i></li>
     </ul>
-  </section>
+                </section>
             </aside>
         </div>
     </div>
