Default page template

--- a/omOss/omOss.html
+++ b/omOss/omOss.html
@@ -105,7 +105,7 @@
         <aside class="col1">
             <section class="link-list card">
                 <h3>Om oss</h3>
-                <ul>
+                <ul class="page-nav">
                     <li><a href="#">Organisation</a></li>
                     <li><a href="#">Så styrs myndigheten</a></li>
                     <li><a href="#">Redovisning av myndigheten</a></li>
