cleans upp css for kontakt

--- a/kontakt/kontakt.html
+++ b/kontakt/kontakt.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/css/grid.css">
     <link rel="stylesheet" href="/templates/header/headerStyle.css" />
     <link rel="stylesheet" href="/templates/footer/footer.css" />
+    <link rel="stylesheet" href="/css/style.css" />
 </head>
 
 <body>
@@ -66,28 +67,28 @@
         </p>
     </section>
     <div class="twoByTwo">
-        <div class="card">
+        <div class="button">
             <a>
                <h2>
                    Hitta utbildningar
                </h2>
            </a>
        </div>
-        <div class="card">
+        <div class="button">
             <a>
                <h2>
                    Anmäl brister i en utbildning
                </h2>
            </a>
        </div>
-       <div class="card">
+       <div class="button">
            <a>
                <h2>
                    Jobba hos oss
                </h2>
            </a>
        </div>
-        <aside class="card">
+        <aside class="button">
             <h3>
                 Dela
             </h3>
@@ -102,8 +103,8 @@
         </h2>
         <br />
         <p>
-            Myndigheten för yrkeshögskolan är en statlig myndighet. Det du skickar till oss via e-post, post eller
-             fax blir därför en allmän handling. Vi registrerar allmänna handlingar och sparar dem i vårt diarium.
+            Myndigheten för yrkeshögskolan är en statlig myndighet. <br /> Det du skickar till oss via e-post, post eller
+             fax blir därför en allmän handling. <br />Vi registrerar allmänna handlingar och sparar dem i vårt diarium.
         </p>
     </section>
     <div class="grid gap">
